tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateCPTCode__c/InterviewTemplateCPTCode__c.object-meta.xml
<CustomObject>
    <description>Managed CPT allowlist records for interview templates. Each row enables one approved CPT code for a specific InterviewTemplate__c.</description>
    <label>Interview Template CPT Code</label>
    <nameField>
        <displayFormat>ITCPT-{000000}</displayFormat>
        <label>Interview Template CPT Code Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interview Template CPT Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>