tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateCPTCode__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this CPT code policy row is active for the interview template.</description>
    <inlineHelpText>Only active CPT code policy rows are used by Interview Session.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>