tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateCPTCode__c/fields/CPT_Code__c.field-meta.xml
<CustomField>
    <fullName>CPT_Code__c</fullName>
    <description>Approved CPT code for this interview template. Values are restricted to the supported billing policy catalog.</description>
    <inlineHelpText>Select one approved CPT code from the billing policy catalog.</inlineHelpText>
    <label>CPT Code</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>90791</fullName>
            </value>
            <value>
                <fullName>90832</fullName>
            </value>
            <value>
                <fullName>90834</fullName>
            </value>
            <value>
                <fullName>90837</fullName>
            </value>
            <value>
                <fullName>90839</fullName>
            </value>
            <value>
                <fullName>90846</fullName>
            </value>
            <value>
                <fullName>90847</fullName>
            </value>
            <value>
                <fullName>90853</fullName>
            </value>
            <value>
                <fullName>H0002</fullName>
            </value>
            <value>
                <fullName>H0004</fullName>
            </value>
            <value>
                <fullName>H0023</fullName>
            </value>
            <value>
                <fullName>H2011</fullName>
            </value>
            <value>
                <fullName>T1017</fullName>
            </value>
            <value>
                <fullName>H0043</fullName>
            </value>
            <value>
                <fullName>H0044</fullName>
            </value>
            <value>
                <fullName>H2014</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>