tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateCPTCode__c/fields/InterviewTemplate__c.field-meta.xml
<CustomField>
    <fullName>InterviewTemplate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Interview template that this CPT code policy row applies to.</description>
    <inlineHelpText>Select the interview template that should allow this CPT code.</inlineHelpText>
    <label>Interview Template</label>
    <referenceTo>InterviewTemplate__c</referenceTo>
    <relationshipLabel>CPT Codes</relationshipLabel>
    <relationshipName>CPT_Codes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>